--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,8 +39,10 @@ services:
     # (this is just an example, not intended to be a production configuration)
     command: --default-authentication-plugin=mysql_native_password
     restart: always
+    ports:
+      - 3306:3306
     environment:
-      MYSQL_ROOT_USER: ${DB_ROOT_PASSWORD} # you can use it on your MYSQL Client to have more flexibility (if needed)
+      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD} # you can use it on your MYSQL Client to have more flexibility (if needed)
     volumes:
       - ./mysql-data:/var/lib/mysql
     networks:
