--- a/api/Gemfile
+++ b/api/Gemfile
@@ -23,7 +23,7 @@ gem 'puma', '~> 5.0'
 # gem "kredis"
 
 # Use Active Model has_secure_password [https://guides.rubyonrails.org/active_model_basics.html#securepassword]
-# gem "bcrypt", "~> 3.1.7"
+gem 'bcrypt', '~> 3.1.7'
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: %i[mingw mswin x64_mingw jruby]
@@ -40,11 +40,27 @@ gem 'rack-cors'
 # for loading .env files on the root of this project
 gem 'dotenv-rails', groups: %i[development test]
 
+# responsible for manage the auth token
+gem 'jwt'
+
+# json serializer
+gem 'jsonapi-rails'
+
+# scope handler
+gem 'has_scope'
+
+# api documentation
+gem 'rswag'
+
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem 'debug', platforms: %i[mri mingw x64_mingw]
 
   gem 'solargraph'
+
+  gem 'rspec-rails', '~> 5.0', '>= 5.0.2'
+
+  gem 'rswag-specs'
 end
 
 group :development do
