--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,12 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.0.0",
+    "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "jwt-decode": "^3.1.2",
     "next": "13.2.4",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
+    "react-redux": "^8.0.5",
+    "react-toastify": "^9.1.2",
+    "yup": "^1.0.2"
   }
 }
